# LearnEffectCpp

./: .gitignore  CMakeLists.txt  README.md
00_Introduction/: CMakeLists.txt  Terminology.cpp
01_Accustoming_Yourself_to_Cpp/: 01_View_Cpp_as_a_federation_of_languages.md  02_prefer_const_enum_inline_to_define.cpp  03_bitwise_const_mutable_function_reuse.cpp  03_use_const_whenever_possible.cpp  04_Init_before_being_used.cpp
02_Constructors_Destructors_and_Assignment_Operators/: 05_Silently_writes_calls.cpp  06_Disallow_synthesized_functions.cpp  07_Declare_destuctors_virtual.cpp  08_Exception_destructors.cpp  09_Virtual_function_construction_destruction.cpp  10_Assignment_return_reference.cpp  11_Handle_assignment_to_self.cpp  12_Copy_all_parts_of_an_object.cpp
03_Resource_Management/: 13_Use_objects_to_manage_resources.cpp  14_Copying_RAII.cpp  15_Access_to_raw_resources.cpp  16_Same_form_new_delete.cpp  17_Store_newed_object_statndalone.cpp
04_Designs_and_Declarations/: 18_Make_interface_easy_to_use.cpp  19_Treat_class_design_as_type_design.cpp  20_Perfer_pass_by_reference_to_const.cpp  21_Do_not_return_reference.cpp  22_Declare_data_members_private.cpp  23_Prefer_non-member-friend_to_member.cpp  24_non-member_conversions.cpp  25_Non-throwing_swap.cpp  (+1 more)
05_Implememtations/: 27_Minimize_casting.cpp  29_Strive_for_exception_safe.cpp  30_Inline.cpp  CMakeLists.txt
05_Implememtations/31_Minimize_compilation_dependencies/: CMakeLists.txt  Person.cpp  source.cpp
05_Implememtations/31_Minimize_compilation_dependencies/include/: Address.h  Date.h  Person.h
(+28 files in other folders)
