cmake_minimum_required(VERSION 3.15)
project(LearnEffectCpp)

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/00_Introduction)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/01_Accustoming_Yourself_to_Cpp)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/02_Constructors_Destructors_and_Assignment_Operators)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/03_Resource_Management)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/04_Designs_and_Declarations)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/05_Implementations)